--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "db:clear": "node scripts/clear-database.js",
+    "db:clear:confirm": "node scripts/clear-database.js --confirm",
+    "db:clear:dry-run": "node scripts/clear-database.js --dry-run"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
